--- a/index.html
+++ b/index.html
@@ -25,6 +25,49 @@
             <img src="man eating burger-01.png" alt="">
         </div>
     </section>
+    <section class="Second-section">
+        <div class="second-half-width">
+            <img src="Male profile picture.png" alt="">
+        </div>
+        <div class="second-half-width">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, illum voluptatum. Qui ea officiis
+                vel cumque, architecto perferendis. Mollitia quia quasi temporibus quaerat delectus quo dignissimos
+                aliquam, non in iusto quisquam quidem recusandae commodi nihil accusamus rem est omnis id consequuntur
+                similique facilis laudantium laboriosam obcaecati ut. Laborum, placeat pariatur?</p>
+            <a class="Contact" href="Button">Contact Me</a>
+        </div>
+    </section>
+    <section class="thrid-section">
+        <h1>My Recepies</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores quod saepe vitae error ducimus
+            doloremque quis facere aliquid iusto dolore.</p>
+        <div class="Recepie">
+            <div class="third-half-width">
+                <h2>Recepie Title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi doloribus, incidunt assumenda
+                    consectetur odit corrupti facilis, molestiae esse doloremque, accusamus repudiandae iste aut atque
+                    culpa in quaerat porro cumque quo iusto necessitatibus dicta sit. Asperiores, quae maiores
+                    dignissimos deserunt illum, tempore facere, in ratione ab exercitationem ad molestiae vero saepe!
+            </div>
+            <div class="fourth-half-width">
+                <h2>Recepie Title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi doloribus, incidunt assumenda
+                    consectetur odit corrupti facilis, molestiae esse doloremque, accusamus repudiandae iste aut atque
+                    culpa in quaerat porro cumque quo iusto necessitatibus dicta sit. Asperiores, quae maiores
+                    dignissimos deserunt illum, tempore facere, in ratione ab exercitationem ad molestiae vero saepe!
+                </p>
+            </div>
+            <div class="fifth-half-width">
+                <h2>Recepie Title</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus, explicabo unde? Nisi enim tempore
+                    esse iste fuga voluptate nulla eos veniam harum voluptatum reiciendis nihil nam voluptates, iusto
+                    rem pariatur maiores eveniet modi soluta laboriosam labore officia necessitatibus dolor molestiae.
+                    Quaerat illum porro eaque voluptatem dicta explicabo quas doloremque accusamus?</p>
+            </div>
+        </div>
+
+    </section>
 
 </body>
 
