--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             doloremque quis facere aliquid iusto dolore.</p>
         <div class="Recepie">
             <div class="third-half-width">
+                <img src="Project Cover.jpg" alt="">
                 <h2>Recepie Title</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi doloribus, incidunt assumenda
                     consectetur odit corrupti facilis, molestiae esse doloremque, accusamus repudiandae iste aut atque
@@ -51,6 +52,7 @@
                     dignissimos deserunt illum, tempore facere, in ratione ab exercitationem ad molestiae vero saepe!
             </div>
             <div class="fourth-half-width">
+                <img src="Project Cover.png" alt="">
                 <h2>Recepie Title</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi doloribus, incidunt assumenda
                     consectetur odit corrupti facilis, molestiae esse doloremque, accusamus repudiandae iste aut atque
@@ -59,15 +61,39 @@
                 </p>
             </div>
             <div class="fifth-half-width">
+                <img src="Project Cover1.jpg" alt="">
                 <h2>Recepie Title</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus, explicabo unde? Nisi enim tempore
-                    esse iste fuga voluptate nulla eos veniam harum voluptatum reiciendis nihil nam voluptates, iusto
-                    rem pariatur maiores eveniet modi soluta laboriosam labore officia necessitatibus dolor molestiae.
-                    Quaerat illum porro eaque voluptatem dicta explicabo quas doloremque accusamus?</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi doloribus, incidunt assumenda
+                    consectetur odit corrupti facilis, molestiae esse doloremque, accusamus repudiandae iste aut atque
+                    culpa in quaerat porro cumque quo iusto necessitatibus dicta sit. Asperiores, quae maiores
+                    dignissimos deserunt illum, tempore facere, in ratione ab exercitationem ad molestiae vero saepe!
+                </p>
+
+
             </div>
         </div>
 
     </section>
+    <section class="final-section">
+        <div class="final-half-width">
+            <h1>700k</h1>
+            <p>Youtube subscriber</p>
+        </div>
+        <div class="final-half-width">
+            <h1>700k</h1>
+            <p>Youtube subscriber</p>
+        </div>
+        <div class="final-half-width">
+            <h1>700k</h1>
+            <p>Youtube subscriber</p>
+        </div>
+    </section>
+    <footer>
+        <div class="food-network">
+            <h2>Food Network</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, error.</p>
+        </div>
+    </footer>
 
 </body>
 
