--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </section>
     <section class="Second-section">
-        <div class="second-half-width">
+        <div>
             <img src="Male profile picture.png" alt="">
         </div>
         <div class="second-half-width">
@@ -45,7 +45,7 @@
         <div class="Recepie">
             <div class="third-half-width">
                 <img src="Project Cover.jpg" alt="">
-                <h2>Recepie Title</h2>
+                <h3 class="Recepie-Title">Recepie Title</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi doloribus, incidunt assumenda
                     consectetur odit corrupti facilis, molestiae esse doloremque, accusamus repudiandae iste aut atque
                     culpa in quaerat porro cumque quo iusto necessitatibus dicta sit. Asperiores, quae maiores
@@ -53,7 +53,7 @@
             </div>
             <div class="fourth-half-width">
                 <img src="Project Cover.png" alt="">
-                <h2>Recepie Title</h2>
+                <h3 class="Recepie-Title">Recepie Title</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi doloribus, incidunt assumenda
                     consectetur odit corrupti facilis, molestiae esse doloremque, accusamus repudiandae iste aut atque
                     culpa in quaerat porro cumque quo iusto necessitatibus dicta sit. Asperiores, quae maiores
@@ -62,7 +62,7 @@
             </div>
             <div class="fifth-half-width">
                 <img src="Project Cover1.jpg" alt="">
-                <h2>Recepie Title</h2>
+                <h3 class="Recepie-Title">Recepie Title</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi doloribus, incidunt assumenda
                     consectetur odit corrupti facilis, molestiae esse doloremque, accusamus repudiandae iste aut atque
                     culpa in quaerat porro cumque quo iusto necessitatibus dicta sit. Asperiores, quae maiores
@@ -80,12 +80,12 @@
             <p>Youtube subscriber</p>
         </div>
         <div class="final-half-width">
-            <h1>700k</h1>
-            <p>Youtube subscriber</p>
+            <h1>500k</h1>
+            <p>Instagram subscriber</p>
         </div>
         <div class="final-half-width">
-            <h1>700k</h1>
-            <p>Youtube subscriber</p>
+            <h1>400k</h1>
+            <p>facebook subscriber</p>
         </div>
     </section>
     <footer>
